tests/ui/traits/const-traits/const-drop-bound.stderr
error[E0658]: use of unstable library feature `const_destruct`
  --> $DIR/const-drop-bound.rs:7:5
   |
LL | use std::marker::Destruct;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #10 <https://github.com/rust-lang/rust/issues/10> for more information
   = help: add `#![feature(const_destruct)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `const_destruct`
  --> $DIR/const-drop-bound.rs:9:68
   |
LL | const fn foo<T, E>(res: Result<T, E>) -> Option<T> where E: ~const Destruct {
   |                                                                    ^^^^^^^^
   |
   = note: see issue #10 <https://github.com/rust-lang/rust/issues/10> for more information
   = help: add `#![feature(const_destruct)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `const_destruct`
  --> $DIR/const-drop-bound.rs:20:15
   |
LL |     T: ~const Destruct,
   |               ^^^^^^^^
   |
   = note: see issue #10 <https://github.com/rust-lang/rust/issues/10> for more information
   = help: add `#![feature(const_destruct)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `const_destruct`
  --> $DIR/const-drop-bound.rs:21:15
   |
LL |     E: ~const Destruct,
   |               ^^^^^^^^
   |
   = note: see issue #10 <https://github.com/rust-lang/rust/issues/10> for more information
   = help: add `#![feature(const_destruct)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-bound.rs:9:61
   |
LL | const fn foo<T, E>(res: Result<T, E>) -> Option<T> where E: ~const Destruct {
   |                                                             ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-bound.rs:9:61
   |
LL | const fn foo<T, E>(res: Result<T, E>) -> Option<T> where E: ~const Destruct {
   |                                                             ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-bound.rs:20:8
   |
LL |     T: ~const Destruct,
   |        ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-bound.rs:21:8
   |
LL |     E: ~const Destruct,
   |        ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-bound.rs:20:8
   |
LL |     T: ~const Destruct,
   |        ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-drop-bound.rs:21:8
   |
LL |     E: ~const Destruct,
   |        ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0493]: destructor of `E` cannot be evaluated at compile-time
  --> $DIR/const-drop-bound.rs:12:13
   |
LL |         Err(_e) => None,
   |             ^^        - value is dropped here
   |             |
   |             the destructor for this type cannot be evaluated in constant functions

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0493, E0658.
For more information about an error, try `rustc --explain E0493`.
